[gd_scene load_steps=2 format=3 uid="uid://bqmch8xq2h1kp"]

[ext_resource type="Script" uid="uid://krt8hgeuuxmi" path="res://uielements/inventory/inventory_row.gd" id="1_x8v9z"]

[node name="InventoryRow" type="Control"]
custom_minimum_size = Vector2(0, 33.04)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x8v9z")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ItemInfo" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ItemName" type="Label" parent="MarginContainer/HBoxContainer/ItemInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Item Name"

[node name="ActionButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Use"
